fix splendid base url

--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
-self host samplr sounds
 visual for piano velocity - 5% at top
 custom hotkeys
-hotkeys for percussion
-choose start/end based on width
+	- nice for percussion
+choose piano start/end based on width
+
+sequencing
+
+sfz instrument basics
