--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ midi per-instrument
 responsive header
 	flashing analyzer background
 note colors
+sha on page
 
 graph editor
 remove need for string samples
