better drums layout

--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
 midi per-instrument
+kit piece
+	no sample = gray
+	drag piece to add
 responsive header
 	flashing analyzer background
 note colors
@@ -6,3 +9,5 @@ sha on page
 
 graph editor
 remove need for string samples
+instrument encoding
+	url encoding?
